<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuLockOutlineUpdateAnalysisList"
        android:title="@string/disable"
        android:icon="@drawable/ic_lock_outline_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuLockOpenUpdateAnalysisList"
        android:title="@string/enable"
        android:icon="@drawable/ic_lock_open_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuUpdateUpdateAnalysisList"
        android:title="@string/update"
        android:icon="@drawable/ic_update_update_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuAddUpdateAnalysisList"
        android:title="@string/addQuestion"
        android:icon="@drawable/ic_add_while_24dp"
        app:showAsAction="always"/>

</menu>
