<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/subjectEhisabListLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:maxLines="2"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/descriptionEhisabListLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/description"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/money"/>
                <TextView
                    android:id="@+id/rupeesEhisabListLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/money"
                    android:layout_toEndOf="@id/money" />
                <TextView
                    android:id="@+id/categoryEhisabListLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:text="@string/category"
                    android:textColor="@color/pink_400"
                    android:layout_toRightOf="@id/rupeesEhisabListLay"
                    android:layout_toEndOf="@id/rupeesEhisabListLay"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:id="@+id/timeEhisabListLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/cyan_400"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/keyEhisabListLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>