<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/imageNoticePoppup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textSize="18sp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/bluedark"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/fileNoticePopup"
        android:layout_below="@id/imageNoticePoppup"
        android:layout_marginTop="4dp"
        android:layout_width="150dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/file"
        android:background="@drawable/circle"
        android:backgroundTint="@color/bluedark"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/closeNoticePopup"
        android:layout_below="@id/fileNoticePopup"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:background="@drawable/circle"
        android:backgroundTint="@color/yt"
        android:textColor="@color/white"/>
</RelativeLayout>