<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/withdrawPoppupEhisab"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:textSize="18sp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/bluedark"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/depositPoppupEhisab"
        android:layout_below="@id/withdrawPoppupEhisab"
        android:layout_marginTop="4dp"
        android:layout_width="150dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/deposit"
        android:background="@drawable/circle"
        android:backgroundTint="@color/bluedark"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/payPoppupEhisab"
        android:layout_below="@id/depositPoppupEhisab"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:background="@drawable/circle"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"/>
</RelativeLayout>