<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spi"
    tools:context=".question_analysis.TakeExamQuetion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="-40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/questionCounterTakeExQTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/country_code"/>
                <TextView
                    android:id="@+id/timeCounterTakeExQTV"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:text="@string/country_code"/>
            </LinearLayout>
            <TextView
                android:id="@+id/questionTakeExQTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/questions"/>
            <ImageView
                android:id="@+id/imageTakeExQImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RadioGroup
        android:id="@+id/radioGroupTakeExQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/radioBtn1TakeExQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/option1"/>
        <RadioButton
            android:id="@+id/radioBtn2TakeExQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/option2"/>
        <RadioButton
            android:id="@+id/radioBtn3TakeExQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/option3"/>
        <RadioButton
            android:id="@+id/radioBtn4TakeExQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/option4"/>
    </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="10dp"
            android:gravity="center">
            <Button
                android:id="@+id/previousBtnTakeExQ"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:background="@drawable/circle"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/tw"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/nextBtnTakeExQ"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/circle"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>