<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/subjectHisabLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:text="@string/subject"/>
        <TextView
            android:id="@+id/descriptionHisabLay"
            android:layout_below="@id/subjectHisabLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:maxLines="3"
            android:text="@string/description"/>
        <LinearLayout
            android:id="@+id/LinearLayoutHisabLay"
            android:layout_below="@id/descriptionHisabLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/money"/>
            <TextView
                android:id="@+id/moneyHisabLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/money"/>
        </LinearLayout>
        <TextView
            android:id="@+id/dateHisabLay"
            android:layout_below="@id/LinearLayoutHisabLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:id="@+id/statusHisabLay"
            android:layout_below="@id/dateHisabLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:textColor="@color/red"/>
        <TextView
            android:id="@+id/keyHisabLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>